[gd_scene load_steps=7 format=3 uid="uid://cauib76nahvnp"]

[ext_resource type="Script" uid="uid://dt882v8kyrq1d" path="res://scripts/dialogue.gd" id="1_dialogue"]
[ext_resource type="Texture2D" uid="uid://dxq4efhlrxub2" path="res://dialague/Images/idleSmokeing.png" id="2_player"]
[ext_resource type="Texture2D" uid="uid://75a1ecbt8d0l" path="res://assets/images/moominmama.PNG" id="3_npc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_portrait_frame"]
bg_color = Color(0.98, 0.97, 0.93, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.35, 0.31, 0.27, 0.9)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.35)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dialogue"]
content_margin_left = 25.0
content_margin_top = 20.0
content_margin_right = 25.0
content_margin_bottom = 20.0
bg_color = Color(0.96, 0.94, 0.88, 0.98)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.32, 0.28, 0.24, 0.85)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.18, 0.15, 0.12, 0.5)
shadow_size = 12
shadow_offset = Vector2(0, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_name_banner"]
content_margin_left = 20.0
content_margin_top = 8.0
content_margin_right = 20.0
content_margin_bottom = 8.0
bg_color = Color(0.42, 0.52, 0.48, 0.92)
border_width_bottom = 3
border_color = Color(0.28, 0.35, 0.32, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 4
shadow_offset = Vector2(0, 2)

[node name="Dialogue" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_dialogue")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.4509804)

[node name="DialogueContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerPortrait" type="TextureRect" parent="DialogueContainer"]
z_index = 10
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.76
anchor_right = 0.12
anchor_bottom = 0.76
offset_left = -10.0
offset_top = -180.0
offset_right = 230.0
offset_bottom = 60.0
pivot_offset = Vector2(120, 120)
mouse_filter = 2
texture = ExtResource("2_player")
expand_mode = 1
stretch_mode = 5

[node name="PlayerFrame" type="Panel" parent="DialogueContainer/PlayerPortrait"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_portrait_frame")

[node name="PlayerNameLabel" type="Label" parent="DialogueContainer/PlayerPortrait"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = 8.0
offset_right = 60.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.22, 0.2, 0.18, 1)
theme_override_colors/font_shadow_color = Color(0.98, 0.96, 0.92, 0.5)
theme_override_colors/font_outline_color = Color(0.98, 0.96, 0.92, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Snufkin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NPCPortrait" type="TextureRect" parent="DialogueContainer"]
z_index = 10
layout_mode = 1
anchors_preset = -1
anchor_left = 0.88
anchor_top = 0.76
anchor_right = 0.88
anchor_bottom = 0.76
offset_left = -230.0
offset_top = -180.0
offset_right = 10.0
offset_bottom = 60.0
pivot_offset = Vector2(120, 120)
mouse_filter = 2
texture = ExtResource("3_npc")
expand_mode = 1
stretch_mode = 5

[node name="NPCFrame" type="Panel" parent="DialogueContainer/NPCPortrait"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_portrait_frame")

[node name="NPCNameLabel" type="Label" parent="DialogueContainer/NPCPortrait"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = 8.0
offset_right = 80.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.22, 0.2, 0.18, 1)
theme_override_colors/font_shadow_color = Color(0.98, 0.96, 0.92, 0.5)
theme_override_colors/font_outline_color = Color(0.98, 0.96, 0.92, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Moomin mama"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogueBox" type="Panel" parent="DialogueContainer"]
z_index = 5
layout_mode = 1
anchors_preset = -1
anchor_top = 0.76
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 120.0
offset_top = -20.0
offset_right = -120.0
offset_bottom = -30.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dialogue")

[node name="DecorativeCornerTL" type="Label" parent="DialogueContainer/DialogueBox"]
layout_mode = 0
offset_left = 15.0
offset_top = 10.0
offset_right = 55.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.42, 0.52, 0.48, 0.6)
theme_override_font_sizes/font_size = 32
text = "❋"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DecorativeCornerTR" type="Label" parent="DialogueContainer/DialogueBox"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -55.0
offset_top = 10.0
offset_right = -15.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.42, 0.52, 0.48, 0.6)
theme_override_font_sizes/font_size = 32
text = "❋"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DecorativeCornerBL" type="Label" parent="DialogueContainer/DialogueBox"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -50.0
offset_right = 55.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.42, 0.52, 0.48, 0.6)
theme_override_font_sizes/font_size = 32
text = "❋"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DecorativeCornerBR" type="Label" parent="DialogueContainer/DialogueBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -50.0
offset_right = -15.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.42, 0.52, 0.48, 0.6)
theme_override_font_sizes/font_size = 32
text = "❋"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NPCNameBanner" type="Panel" parent="DialogueContainer/DialogueBox"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = -5.0
offset_right = 180.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_name_banner")

[node name="NPCName" type="Label" parent="DialogueContainer/DialogueBox/NPCNameBanner"]
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.98, 0.96, 0.92, 1)
theme_override_colors/font_shadow_color = Color(0.15, 0.18, 0.16, 0.6)
theme_override_colors/font_outline_color = Color(0.25, 0.3, 0.28, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 28
text = "NPC Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogueText" type="RichTextLabel" parent="DialogueContainer/DialogueBox"]
z_index = 15
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -477.0
offset_top = 114.20001
offset_right = 490.0
offset_bottom = -19.0
mouse_filter = 2
theme_override_colors/default_color = Color(0.22, 0.2, 0.18, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 0.15)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 28
bbcode_enabled = true
text = "Dialogue text appears here with a gentle typewriter effect, evoking the feeling of reading a beloved storybook..."
scroll_active = false

[node name="TypewriterTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.03
